test/arrays/ferguson/return-array-as-int.good
return-array-as-int.chpl:7: In method 'setRowNames':
return-array-as-int.chpl:8: error: cannot initialize return value of type 'int(64)' from a '[domain(1,int(64),false)] int(64)'
  return-array-as-int.chpl:12: called as NamedMatrix.setRowNames(rn: [domain(1,int(64),false)] string)
